fixed youtube iframe getting cut off

--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -95,7 +95,7 @@ a .glyphicon:hover {
     position: relative;
 }
 
-.widget-row iframe, .widget-row img {
+.widget-row .embed-responsive, .widget-row img {
     margin-top: 20px;
     width: 100%;
 }
